# rg_labs

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/src/: BSpline.cpp  BSpline.hpp  Camera.hpp  Model.cpp  main.cpp
lab1/src/shaders/: bspline.vert  model.vert  triangle.vert
lab2/: CMakeLists.txt
lab2/include/glad/: glad.h
lab2/src/: BSpline.cpp  Camera.hpp  ConstantTimeDistribution.cpp  ConstantTimeDistribution.hpp  Model.cpp  Model.hpp  Particle.hpp  ParticleDestroyer.hpp  ParticleGenerator.hpp  ParticleModelGenerator.hpp  ParticlePointGenerator.cpp  ParticlePointGenerator.hpp  ParticleQuadGenerator.cpp  ParticleQuadGenerator.hpp  ParticleSystem.cpp  ParticleSystem.hpp  ParticleTimeDistribution.hpp  PeriodicTimeDistribution.cpp  PeriodicTimeDistribution.hpp  Shader.cpp  Shader.hpp  SimpleParticleGenerator.cpp  SimpleParticleGenerator.hpp  TimeParticleDestroyer.cpp  TimeParticleDestroyer.hpp  glad.c  main.cpp
lab2/src/shaders/: model.frag  particle.frag  particle.gs  particle.vert  particle_feed.vert
lab3/: CMakeLists.txt
lab3/src/: Camera.hpp  Quad.cpp  Quad.hpp  SkyMap.cpp  SkyMap.hpp  main.cpp
lab3/src/shaders/: quad_para.frag  quad_para.vert
